# sme-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: appinfo.rs  lib.rs  main.rs
src/v29/: mod.rs  packer.rs  parser.rs
src/vdf/: mod.rs  packer.rs  parser.rs  serializer.rs  stringify.rs
