[package]
name = "sme-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indexmap = "2.7"
nom = "7"
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xdg = "2.5"